Support for selecting the tuning and the number of frets.

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,3 +1,7 @@
+.octave-C0 {
+    background-color: #B1B2B1;
+}
+
 .octave-C1 {
     background-color: #67B3DD;
 }
@@ -12,4 +16,8 @@
 
 .octave-C4 {
     background-color: #7BAD45;
+}
+
+.octave-C5 {
+    background-color: #8A29AA;
 }
